--- a/lib/lib.fsproj
+++ b/lib/lib.fsproj
@@ -8,8 +8,8 @@
   <ItemGroup>
     <Compile Include="ProjectUtils.fs" />
     <Compile Include="RayPlatform.fs" />
-    <Compile Include="String2.fs" />
     <Compile Include="IntVec.fs" />
+    <Compile Include="Graph.fs" />
   </ItemGroup>
 
   <ItemGroup>
