--- a/lib/lib.fsproj
+++ b/lib/lib.fsproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="Lens.fs" />
     <Compile Include="ProjectUtils.fs" />
     <Compile Include="IntVec.fs" />
     <Compile Include="RayPlatform.fs" />
