--- a/exe/exe.fsproj
+++ b/exe/exe.fsproj
@@ -6,9 +6,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Include="Creature.fs" />
     <Compile Include="Model.fs" />
-    <Compile Include="Update.fs" />
+    <Compile Include="CharacterSystem.fs" />
     <Compile Include="Subscription.fs" />
     <Compile Include="View.fs" />
     <Compile Include="Program.fs" />
