--- a/exe/exe.fsproj
+++ b/exe/exe.fsproj
@@ -6,12 +6,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Include="todo.txt" />
     <Compile Include="Model.fs" />
     <Compile Include="CharacterSystem.fs" />
     <Compile Include="Subscription.fs" />
     <Compile Include="View.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
+
+  <ItemGroup />
 
   <ItemGroup>
     <PackageReference Include="Raylib-CSharp-Vinculum" Version="5.0.1" />
