--- a/lib/lib.fsproj
+++ b/lib/lib.fsproj
@@ -8,6 +8,8 @@
   <ItemGroup>
     <Compile Include="Accessor.fs" />
     <Compile Include="ProjectUtils.fs" />
+    <Compile Include="BinaryTree.fs" />
+    <Compile Include="PriorityQ.fs" />
     <Compile Include="IntVec.fs" />
     <Compile Include="Bounds.fs" />
     <Compile Include="RayPlatform.fs" />
